# Bibo_No-Aozora

./: CMakeLists.txt  LICENSE  README.md  main.cpp  main_course.cpp
Introduction/: Programming Tree.md
SSP_MMC/: SSP_MMC.cpp  SSP_MMC.h
SpectralLoom/: Chord.h  Pitch.h  RecordPlayer.cpp  SpectralLoom.cpp  SpectralLoom.h
SpectralLoom/tools/: CelloDynamic.h  ComprehensiveExamination.h  EnvHarmonics.h  RecordPlayer.h
Src/: Chord.cpp  Chord.h  EnvHarmonics.cpp  EnvHarmonics.h  Envelop.cpp  Envelop.h  Harmonics.cpp  Harmonics.h  Note.cpp  Note.h  Pitch.cpp  Pitch.h  RecordPlayer.cpp  RecordPlayer.h  SingleTrack.h  TonePreset.h
class/: BinTreeClass.cpp
cpp-core/: .gitignore  CMakeLists.txt  main.cpp
cpp-core/backend/database/: Database.md  DatabaseChecker.cpp  DatabaseChecker.h
cpp-core/backend/database/manual/: config.csv  course.csv  user.csv
cpp-core/backend/database/templates/: config.template.csv  course.template.csv  courseComplier.template.csv  learningData.template.csv  todayCards.template.csv  trust.template.csv  user.template.csv
cpp-core/backend/mapper/: DataInitializer.cpp  DataInitializer.h
cpp-core/backend/service/: MasterScheduler.cpp  MasterScheduler.h
cpp-core/docs/introduction/: Course Introduction.md  csvRules.md  essentia_basic.csv  essentia_middle.csv  modeIntroduction.md
cpp-core/docs/introduction/algorithms/: course.csv  devlog.md
cpp-core/docs/other/zzz_JustForJoy/: DuckdbCompiler.cpp  DuckdbCompiler.h  Kruskal.cpp  main_bach.cpp  main_course.cpp
cpp-core/icon/: aozora.txt
cpp-core/terminal/: Terminal.cpp
cpp-core/utils/internal/AozoraDatabase/: AozoraDatabase.cpp  AozoraDatabase.h
cpp-core/utils/internal/MyEssentia/: MyEssentia.cpp  MyEssentia.h
cpp-core/utils/internal/MyEssentia/results/: Intermediate-Waltz_for_Debby.csv  Intermediate-piano_bright_C4.csv  Intermediate-piano_chord_C_major.csv  Intermediate-piano_soft_C4.csv  basic-Waltz_for_Debby.csv  basic-piano_bright_C4.csv  basic-piano_chord_C_major.csv  basic-piano_soft_C4.csv
cpp-core/utils/internal/MyMidifile/: MyMidifile.cpp  MyMidifile.h
cpp-core/utils/internal/MySSP_MMC/: SSP_MMC.cpp
cpp-core/utils/internal/SSP_MMC/: SSP_MMC.h
cpp-core/utils/internal/SpectralLoom/: SpectralLoom.cpp  SpectralLoom.h
cpp-core/utils/internal/SpectralLoom/tools/: Chord.cpp  ComprehensiveExamination.cpp  EnvHarmonics.cpp  Pitch.cpp  RecordPlayer.h  SingleTrack.cpp  SingleTrack.h
cpp-core/utils/internal/essentia/: MyEssentia.cpp  MyEssentia.h
cpp-core/utils/internal/terminal/: Terminal.cpp  Terminal.h
docs/: devlog.md
introduction/: makeMyMind.md
ios-frontend/Bibo_no-Aozora/Bibo_no-Aozora/: Bibo_no_AozoraApp.swift  ContentView.swift  Persistence.swift
ios-frontend/Bibo_no-Aozora/Bibo_no-Aozora.xcodeproj/: project.pbxproj
ios-frontend/Bibo_no-Aozora/Bibo_no-Aozora.xcodeproj/project.xcworkspace/xcuserdata/opusarc.xcuserdatad/: UserInterfaceState.xcuserstate
ios-frontend/Bibo_no-Aozora/Bibo_no-Aozora.xcodeproj/xcuserdata/opusarc.xcuserdatad/xcschemes/: xcschememanagement.plist
ios-frontend/Bibo_no-Aozora/Bibo_no-Aozora/Assets.xcassets/AccentColor 1.colorset/: Contents.json
ios-frontend/Bibo_no-Aozora/Bibo_no-Aozora/Bibo_no_Aozora.xcdatamodeld/: .xccurrentversion
ios-frontend/Bibo_no-Aozora/Bibo_no-AozoraTests/: Bibo_no_AozoraTests.swift
ios-frontend/Bibo_no-Aozora/Bibo_no-AozoraUITests/: Bibo_no_AozoraUITests.swift  Bibo_no_AozoraUITestsLaunchTests.swift
justForJoy/: DateClass.cpp  Prim.cpp
src/: CelloDynamic.cpp  EnvHarmonics.cpp  EnvHarmonics.h  Pitch.cpp  Pitch.h  RecordPlayer.cpp  RecordPlayer.h
user/learn/course/: README.md  course.csv
zzz_JustForJoy/: main_course.cpp
